# linux-2024-25

./: CMakeLists.txt  README.md
Demo/Allocator/: AllocatorDemo.cpp  CMakeLists.txt
Demo/ArgumentParser/: ArgumentParserDemo.cpp  CMakeLists.txt
Demo/Cp/: CMakeLists.txt  CpDemo.cpp
Demo/Directory/: CMakeLists.txt  DirectoryDemo.cpp
Demo/DirectoryWatcher/: CMakeLists.txt  DirectoryWatcherTest.cpp  test.sh
Demo/DoCommand/: CMakeLists.txt  DoCommandDemo.cpp
Demo/Iterator/: ArgumentParser.cpp  CMakeLists.txt  CircularIntIterator.cpp  Directory.cpp  FilterIntegerIterator.cpp  ReverseArrayIterator.cpp
Demo/Iterator/TEST/0papka/3000/: some.txt
Demo/Magic/: CMakeLists.txt  DoMagicTest.cpp  DoMagicTest_2.cpp  do_magic.cpp
Demo/Magic/TestFiles/: new_pts.txt
Demo/SerDes/: CMakeLists.txt  SerDesDemo.cpp
Demo/SuperRm/: CMakeLists.txt  SuperRmDemo.cpp
Demo/Thread/: CMakeLists.txt  main.cpp
Demo/Thread/BlockingQueue/: BlockingQueueDemo.cpp
Demo/Thread/ThreadPool/: ThreadPoolDemo.cpp
Demo/Ussr/: CMakeLists.txt  KGB.cpp  Spy.cpp
Demo/Xargs/: CMakeLists.txt  XargsDemo.cpp
FTP_Server/: CMakeLists.txt  Socket.h  Support.h  client.cpp  server.cpp
FTP_Server/ClientUtils/: Direction.h  Download_Upload.h  Session.h
FTP_Server/ServerUtils/: Direction.h  Download_Upload.h  Session.h
FTP_Server/Thread/BlockingQueue/: BlockingQueue.h
FTP_Server/Thread/ThreadPool/: ThreadPool.h
Utils/: CMakeLists.txt
Utils/Allocator/: Allocator.cpp  Allocator.h
Utils/ArgumentParser/: ArgumentParser.cpp  ArgumentParser.h
Utils/Cp/: Cp.cpp  Cp.h
Utils/Directory/: Directory.cpp  Directory.h
Utils/DirectoryWatcher/: DirectoryWatcher.cpp  DirectoryWatcher.h
Utils/DoCommand/: DoCommand.cpp  DoCommand.h
Utils/Iterator/: ArgumentParser.h  CircularIntIterator.cpp  CircularIntIterator.h  Directory.h  FilterIntegerIterator.cpp  FilterIntegerIterator.h  ReverseArrayIterator.cpp  ReverseArrayIterator.h
Utils/SerDes/: SerDes.cpp  SerDes.h
Utils/SuperRm/: SuperRm.cpp  SuperRm.h
Utils/Thread/: LinuxMutex.h  LinuxThread.h
Utils/Thread/BlockingQueue/: BlockingQueue.cpp  BlockingQueue.h
Utils/Thread/ThreadPool/: ThreadPool.h
Utils/Xargs/: Xargs.cpp  Xargs.h
hello_world/: CMakeLists.txt  hello.cpp
