add_library(libutils
        Iterator/CircularIntIterator.cpp
        Iterator/FilterIntegerIterator.cpp
        Iterator/ReverseArrayIterator.cpp
        Allocator/Allocator.cpp
        Directory/Directory.cpp
        SuperRm/SuperRm.cpp
        ArgumentParser/ArgumentParser.cpp
        Cp/Cp.cpp
        SerDes/SerDes.cpp
        DoCommand/DoCommand.cpp
        Xargs/Xargs.cpp
)